--- a/digital_events_repository/web/resources/css/estilo_admi.css
+++ b/digital_events_repository/web/resources/css/estilo_admi.css
@@ -141,6 +141,48 @@ esta clase "movericon" es para mover el icono de añadir usuario
     top: 70px;
 }
 
+#contactenos {
+    position: relative;
+    top: 80px;
+}
+
+#button {
+  display: inline-block;
+  background-color: #FF9800;
+  width: 40px;
+  height: 30px;
+  text-align: center;
+  border-radius: 4px;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  transition: background-color .3s, 
+    opacity .5s, visibility .5s;
+  opacity: 0;
+  visibility: hidden;
+  z-index: 1000;
+}
+#button::after {
+/*  content: "\f077";*/
+  font-family: FontAwesome;
+  font-weight: normal;
+  font-style: normal;
+  font-size: 2em;
+  line-height: 50px;
+  color: #fff;
+}
+#button:hover {
+  cursor: pointer;
+  background-color: #333;
+}
+#button:active {
+  background-color: #555;
+}
+#button.show {
+  opacity: 1;
+  visibility: visible;
+}
+
 .bg-red {
     background-color: #e7828233 !important;
 }
