Agregue toda la internacionalizacion del landing page enlazado, ademas realize el modeulo en donde el cliente puede generar un pdf de los eventos que fueron realizados y el administrador los eventos que fueron realizados a todos los usuarios,ademas realize el modulo de servicio al cliente en la parte del administrador

--- a/digital_events_repository/web/WEB-INF/includes/menus/administrador.xhtml
+++ b/digital_events_repository/web/WEB-INF/includes/menus/administrador.xhtml
@@ -61,7 +61,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link l" href="#">
+                    <a class="nav-link l" href="#{request.contextPath}/SI/administrador/eventos/eventosRealizados.xhtml">
                         <i class="fas fa-clipboard-check"></i>
                         <span class="sidebar-normal">#{menuadmin.lbl_eventos_realizados}</span>
                     </a>
@@ -74,6 +74,12 @@
         <a class="nav-link" href="#{request.contextPath}/SI/administrador/inventario/inventario.xhtml">
             <i class="material-icons">inventory</i>
             <p>#{menuadmin.lbl_inventario}</p>
+        </a>
+    </li>
+    <li class="nav-item ">
+        <a class="nav-link" href="#{request.contextPath}/SI/administrador/servicio_al_cliente/servicio.xhtml">
+            <i class="material-icons">library_books</i>
+            <p>#{menuadmin.lbl_servicio}</p>
         </a>
     </li>
   
