--- a/digital_events_repository/web/WEB-INF/includes/menus/cliente.xhtml
+++ b/digital_events_repository/web/WEB-INF/includes/menus/cliente.xhtml
@@ -40,9 +40,15 @@
         <div class="collapse" id="controlEventos">
             <ul class="nav">
                 <li class="nav-item">
-                    <a class="nav-link l" href="#{request.contextPath}/SI/cliente/eventos/eventos.xhtml">
+                    <a class="nav-link l" href="#{request.contextPath}/SI/cliente/eventosCliente/eventos.xhtml">
                         <i class="fas fa-clipboard-check"></i>
-                        <span class="sidebar-normal">#{menucliente.lbl_eventos_realizados}</span>
+                        <span class="sidebar-normal">#{administrador_eventos.lbl_eventos_reservados}</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link l" href="#{request.contextPath}/SI/cliente/eventosCliente/eventosCliente.xhtml">
+                        <i class="fas fa-clipboard-check"></i>
+                        <span class="sidebar-normal">#{administrador_eventos.lbl_eventos_realizados}</span>
                     </a>
                 </li>
 <!--                <li class="nav-item">
