--- a/digital_events_repository/web/WEB-INF/includes/template/main.xhtml
+++ b/digital_events_repository/web/WEB-INF/includes/template/main.xhtml
@@ -18,7 +18,9 @@
                 <!-- Left-panel-->
                 <ui:include src="/WEB-INF/includes/template/left-panel.xhtml"/>
                 <!-- Left-panel-->
-
+                <a id="button">
+                    <i class="material-icons bottom">keyboard_arrow_up</i>
+                </a>
                 <!-- Right-panel-->
                 <ui:include src="/WEB-INF/includes/template/right-panel.xhtml"/>
                 <!-- Right-panel-->
