--- a/digital_events_repository/web/WEB-INF/includes/template/scripts.xhtml
+++ b/digital_events_repository/web/WEB-INF/includes/template/scripts.xhtml
@@ -100,7 +100,16 @@
             e.preventDefault();
             $('html, body').animate({scrollTop: 0}, '300');
         });
+    </script>
 
+    <script type="text/javascript">
+        $(document).ready(function () {
+            //init DateTimePickers
+            materialKit.initFormExtendedDatetimepickers();
+
+            // Sliders Init
+            materialKit.initSliders();
+        });
     </script>
 
 
